test/visibility/only/hidesDeeper.good
hidesDeeper.chpl:16: In function 'main':
hidesDeeper.chpl:17: error: 'bar' undeclared (first use this function)
